--- a/index.html
+++ b/index.html
@@ -28,9 +28,29 @@
                 <img class="card-icon-senha" src="./assets/icon-senha.svg" alt="senha">
                 <input class="se" id="senha" type="password" name="nome" placeholder="Digite sua senha">
             </div>
-            
 
+            <div>
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="./assets/icon-google.svg" alt="Login do Google">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./assets/icon-facebook.svg" alt="Login do Facebook">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./assets/icon-xbox.svg" alt="Login do Xbox">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            
             <button type="submit">Envia</button>
+
 
         </fieldset>
 
